--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="/css/site.css">
   <link rel="stylesheet" href="/css/spectre-icons.min.css">
   <link rel="stylesheet" href="/css/spectre.min.css">
   {{ template "stylesheets" . }}
