--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="/css/styles/default.css">
   <link rel="stylesheet" href="/css/spectre-icons.min.css">
   <link rel="stylesheet" href="/css/spectre.min.css">
   {{ template "stylesheets" . }}
@@ -11,6 +12,9 @@
   {{ template "css" . }}
   <title>{{.Title}}</title>
 </head>
+
+<script src="/js/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 
 <body>
   <section class="container grid-960 mt-10">
