--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/site.css">
-  <link rel="stylesheet" href="/css/styles/default.css">
+  <link rel="stylesheet" href="/css/styles/ocean.css">
   <link rel="stylesheet" href="/css/spectre-icons.min.css">
   <link rel="stylesheet" href="/css/spectre.min.css">
   {{ template "stylesheets" . }}
