--- a/templates/view.html
+++ b/templates/view.html
@@ -1,7 +1,7 @@
 {{define "content"}}
 <section class="container">
   <div class="columns">
-    <div class="column col-12 text-right">
+    <div class="column col-12 text-right" style="padding: 1rem 0rem 1rem 0rem;">
       <div class="dropdown">
         <div class="btn-group">
           <a class="btn btn-sm btn-primary" href="/edit/{{.Title}}">
@@ -11,7 +11,7 @@
           <a class="btn btn-sm btn-primary dropdown-toggle" tabindex="0">
             <i class="icon icon-caret"></i>
           </a>
-          <ul class="menu">
+          <ul class="menu text-left">
             <li class="menu-item">
               <a href="#dropdowns">
                 <i class="icon icon-delete"></i>
