--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {{define "base"}}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-size: 18px;">
 
 <head>
   <link rel="stylesheet" href="/css/site.css">
@@ -17,7 +17,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 
 <body>
-  <section class="container grid-960 mt-10">
+  <section class="container" style="padding: 1rem 4rem;">
     <header class="navbar">
       <section class="navbar-section">
         <a href="/" class="navbar-brand mr-10">{{.Brand}}</a>
@@ -54,7 +54,7 @@
   div.className = "text-right";
 
   var btn = document.createElement("a");
-  btn.className = "btn btn-sm btn-action";
+  btn.className = "btn btn-sm btn-action btn-primary";
   btn.onclick = () => { console.log("clicked") };
 
   var btn_icon = document.createElement("i");
