--- a/templates/base.html
+++ b/templates/base.html
@@ -69,11 +69,9 @@
 
   var code = document.getElementsByTagName("code");
   for (var i = 0; i < code.length; i++) {
-    if (code[i].parentNode.localName === "p") {
-      continue;
+    if (code[i].parentNode.localName === "pre") {
+      add_copy_button(code[i].parentNode);
     }
-
-    add_copy_button(code[i].parentNode);
   }
 </script>
 
