Code copy buttons now show up when a code area is hovered, or when one of the buttons is hovered.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,3 +1,22 @@
 pre {
 	overflow: auto;
+	position: relative;
+}
+
+/* Copy buttons */
+a.btn-copy {
+  webkit-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+  padding: 2px 6px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+code:hover + .btn-copy {
+    opacity: .5;
+}
+.btn-copy:hover {
+    opacity: 1;
 }
