--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 
 <body>
-  <section class="container" style="padding: 1rem 25rem;">
+  <section class="container" style="width:980px;">
     <header class="navbar">
       <section class="navbar-section">
         <a href="/" class="navbar-brand mr-10">{{.Brand}}</a>
